--- a/styles/globals.css
+++ b/styles/globals.css
@@ -163,6 +163,7 @@ input[type="search"]::-webkit-search-results-decoration {
   font-weight: var(--font-weight-font-semibold, 600);
   line-height: 125%;
   letter-spacing: var(--letter-spacing-tracking-tighter, -0.8px);
+  margin-bottom: 0.5rem;
 }
 
 .single-inner h3 {
@@ -175,6 +176,7 @@ input[type="search"]::-webkit-search-results-decoration {
   line-height: var(--leading-line-height-leading-9, 36px);
   letter-spacing: var(--letter-spacing-tracking-tighter, -0.8px);
   margin-top: 1.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .single-inner p {
@@ -186,8 +188,7 @@ input[type="search"]::-webkit-search-results-decoration {
   font-weight: var(--font-weight-font-normal, 400);
   line-height: var(--leading-line-height-leading-7, 28px);
   letter-spacing: var(--letter-spacing-tracking-normal, 0);
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+  padding-bottom: 1rem;
 }
 
 .single-inner ol {
